--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,11 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/icon.png" />
+  <link rel="icon" href="https://github.com/TomaszTurbak/todo-list-react/blob/master/public/icon.PNG?raw=true" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <meta property="og:image"
+    content="%PUBLIC_URL%/https://github.com/TomaszTurbak/todo-list-react/blob/master/public/todo-logo.PNG?raw=true" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
